devops/deployments/orders/orders-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    environment: dev
