devops/deployments/orders/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
      - name: orders-service
        image: ranenachiket07/app-orders:v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5    # wait 5s before first check
          periodSeconds: 10         # check every 10s
          timeoutSeconds: 2         # fail if no response in 2s
          failureThreshold: 3       # restart after 3 failed checks
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10   # wait a bit longer before ready
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
