devops/deployments/orders/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: app
spec:
  selector:
    app: orders-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
